--- a/ZumaWPF/ZumaWPF.csproj
+++ b/ZumaWPF/ZumaWPF.csproj
@@ -19,6 +19,22 @@
       <None Remove="Assets\Images\game_bg].jpg" />
       <None Remove="Assets\Images\game_bg.jpg" />
       <Resource Include="Assets\Images\game_bg.jpg" />
+      <None Remove="Assets\Sounds\boom.mp3" />
+      <Content Include="Assets\Sounds\boom.mp3">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+      <None Remove="Assets\Sounds\like.mp3" />
+      <Content Include="Assets\Sounds\like.mp3">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+      <None Remove="Assets\Sounds\music.mp3" />
+      <Content Include="Assets\Sounds\music.mp3">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+      <None Remove="Assets\Sounds\shot.mp3" />
+      <Content Include="Assets\Sounds\shot.mp3">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
 </Project>
